updated the homepage

--- a/css/grid.css
+++ b/css/grid.css
@@ -39,6 +39,16 @@ body, p, h1, h2, h3, h4, h5 {
    margin-bottom:10px;
  }
 
+ .box2 {
+   background-color: #a3a3a3;
+   color: rgb(27, 27, 27);
+   
+   padding: 20px;
+   text-align: center;
+   margin-top: 10px;
+   margin-bottom:10px;
+ }
+
 /* ---Mobile Library Grid Styles--- */
 
 /* Note if you are using a grid size of 1920, you need to change the value of 1200px to 1920px on line 50 and 57 */
