--- a/css/main.css
+++ b/css/main.css
@@ -24,57 +24,308 @@ p {
   background-color: #9a9a9a;
   height: 76px;
 }
+
 #main-header #logo {
   height: 48px;
+  margin-top: 10px;
 }
-#main-header #main-nav {
+
+#name {
   display: none;
 }
-#main-header #main-nav ul {
-  display: flex;
-  list-style: none;
-  justify-content: center;
-  padding: 0;
-  margin-top: 20px;
+
+#main-header #portfolionav {
+  display: none;
 }
-#main-header #main-nav ul li {
-  margin-right: 20px;
+
+#main-header #contactnav {
+  display: none;
 }
-#main-header #main-nav ul li:last-child {
-  margin-right: 0px;
-}
-#main-header #main-nav a {
-  color: #FFA458;
-  text-decoration: none;
+
+#burger {
+  height: 33px;
+  margin-top: 15px;
 }
 
 @media screen and (min-width: 768px) {
-  #main-header #main-nav ul {
-    justify-content: flex-end;
+  #main-header #logo {
+    height: 30px;
+    margin-top: 20px;
+  }
+  #main-header #name {
+    display: block;
+    height: 18px;
+    margin-top: 20px;
+  }
+  #main-header #portfolionav {
+    display: block;
+    height: 13px;
+    margin-top: 20px;
+  }
+  #main-header #contactnav {
+    display: block;
+    height: 13px;
+    margin-top: 20px;
+  }
+  #burger {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  #main-header {
+    height: 113px;
   }
   #main-header #logo {
-    margin-left: 0px;
-    margin-right: 0px;
+    height: 72px;
+    margin-top: 20px;
+  }
+  #main-header #name {
+    display: block;
+    height: 47px;
+    margin-top: 30px;
+  }
+  #main-header #portfolionav {
+    display: block;
+    height: 33px;
+    margin-top: 33px;
+  }
+  #main-header #contactnav {
+    display: block;
+    height: 33px;
+    margin-top: 33px;
+  }
+  #burger {
+    display: none;
   }
 }
-#hero-con h3 {
-  font-size: 25px;
+#position {
+  height: 146px;
+  margin-top: 60px;
+}
+
+#caption {
+  height: 137px;
+  margin-top: 20px;
+}
+
+#download {
+  height: 32px;
+}
+
+#meeting {
+  height: 32px;
 }
 
 @media screen and (min-width: 768px) {
-  #hero-con h3 {
-    font-size: 35px;
+  #position {
+    height: 189px;
+    margin-top: 80px;
+  }
+  #caption {
+    height: 65px;
+    margin-top: 200px;
+  }
+  #download {
+    height: 24px;
+  }
+  #meeting {
+    height: 24px;
   }
 }
-@media screen and (min-width: 768px) {
-  #hero-con h3 {
-    font-size: 35px;
+@media screen and (min-width: 1920px) {
+  #position {
+    height: 406px;
+    margin-top: 130px;
+  }
+  #caption {
+    height: 161px;
+    margin-top: 375px;
+  }
+  #download {
+    height: 62px;
+  }
+  #meeting {
+    height: 62px;
   }
 }
-#about-us {
-  margin-bottom: 20px;
+#gallery {
+  background-color: #9a9a9a;
+  margin-top: 20px;
 }
 
-#founders section {
-  margin-bottom: 40px;
+#vault {
+  height: 95px;
+  margin-top: 40px;
+}
+
+#gal1 {
+  height: 288px;
+}
+
+#text1 {
+  height: 40px;
+  margin-top: 200px;
+}
+
+#gal2 {
+  height: 288px;
+}
+
+#text2 {
+  height: 40px;
+  margin-top: 200px;
+}
+
+#gal3 {
+  height: 288px;
+}
+
+#text3 {
+  height: 40px;
+  margin-top: 200px;
+}
+
+@media screen and (min-width: 768px) {
+  #gallery {
+    margin-top: 30px;
+  }
+  #vault {
+    height: 40px;
+  }
+  #gal1 {
+    height: 252px;
+  }
+  #text1 {
+    height: 25px;
+    margin-top: 175px;
+  }
+  #gal2 {
+    height: 252px;
+  }
+  #text2 {
+    height: 25px;
+    margin-top: 175px;
+  }
+  #gal3 {
+    height: 252px;
+  }
+  #text3 {
+    height: 25px;
+    margin-top: 175px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  #vault {
+    height: 100px;
+  }
+  #gal1 {
+    height: 630px;
+  }
+  #text1 {
+    height: 63px;
+    margin-top: 490px;
+  }
+  #gal2 {
+    height: 630px;
+  }
+  #text2 {
+    height: 63px;
+    margin-top: 490px;
+  }
+  #gal3 {
+    height: 630px;
+  }
+  #text3 {
+    height: 63px;
+    margin-top: 490px;
+  }
+}
+#slogan {
+  height: 370px;
+}
+
+#dedication {
+  height: 256px;
+  margin-top: 55px;
+}
+
+@media screen and (min-width: 768px) {
+  #slogan {
+    height: 82px;
+  }
+  #dedication {
+    height: 25px;
+    margin-top: 23px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  #slogan {
+    height: 120px;
+  }
+  #dedication {
+    height: 63px;
+  }
+}
+#insights {
+  background-color: #9a9a9a;
+}
+
+#about {
+  height: 120px;
+  margin-top: 20px;
+}
+
+#myphoto {
+  height: 526px;
+}
+
+#mycap {
+  height: 500px;
+}
+
+#socials {
+  height: 145px;
+}
+
+#icons {
+  height: 125px;
+}
+
+@media screen and (min-width: 768px) {
+  #about {
+    height: 40px;
+    margin-top: 50px;
+  }
+  #myphoto {
+    height: 311px;
+    margin-top: 20px;
+  }
+  #mycap {
+    height: 311px;
+    margin-top: 20px;
+  }
+  #socials {
+    height: 32px;
+    margin-top: 40px;
+  }
+  #icons {
+    height: 40px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  #about {
+    height: 100px;
+  }
+  #myphoto {
+    height: 777px;
+  }
+  #mycap {
+    height: 777px;
+  }
+  #socials {
+    height: 81px;
+  }
+  #icons {
+    height: 100px;
+  }
 }
