--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -24,14 +24,75 @@
     display: none;
 }
 
-#main-header #burger {
-    display: none;
+#burger {
+    height: 33px;
+    margin-top: 15px;
 }
 
+
+
 @media screen and (min-width:768px) {
+
+    #main-header #logo {
+        height: 30px;
+        margin-top: 20px;
+    }
+
+    #main-header #name {
+        display: block;
+        height: 18px;
+        margin-top: 20px;
+    }
+
+    #main-header #portfolionav {
+        display: block;
+        height: 13px;
+        margin-top: 20px;
+    }
+
+    #main-header #contactnav {
+        display: block;
+        height: 13px;
+        margin-top: 20px;
+    }
+
+    #burger {
+        display: none;
+    }
 
 }
 
 @media screen and (min-width:1920px) {
+
+    #main-header {
+        height: 113px;
+    }
+
+    #main-header #logo {
+        height: 72px;
+        margin-top: 20px;
+    }
+
+    #main-header #name {
+        display: block;
+        height: 47px;
+        margin-top: 30px;
+    }
+
+    #main-header #portfolionav {
+        display: block;
+        height: 33px;
+        margin-top: 33px;
+    }
+
+    #main-header #contactnav {
+        display: block;
+        height: 33px;
+        margin-top: 33px;
+    }
+
+    #burger {
+        display: none;
+    }
 
 }
