updated the code

--- a/css/main.css
+++ b/css/main.css
@@ -98,6 +98,43 @@ p {
     display: none;
   }
 }
+#footerlogo {
+  height: 100px;
+  margin-top: 75px;
+}
+
+#footername {
+  height: 39px;
+}
+
+#footerrights {
+  height: 47px;
+}
+
+@media screen and (min-width: 768px) {
+  #footerlogo {
+    height: 59px;
+    margin-top: 90px;
+  }
+  #footername {
+    height: 22px;
+  }
+  #footerrights {
+    height: 14px;
+  }
+}
+@media screen and (min-width: 1920px) {
+  #footerlogo {
+    height: 143px;
+    margin-top: 200px;
+  }
+  #footername {
+    height: 54px;
+  }
+  #footerrights {
+    height: 26px;
+  }
+}
 #position {
   height: 146px;
   margin-top: 60px;
