--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -6,8 +6,11 @@
 }
 
 #vault {
-    height: 95px;
+    height: 55px;
     margin-top: 40px;
+    font-size: 40px;
+    font-family: 'Ovo', serif;
+    padding: 0;
 }
 
 #gal1 {
@@ -17,6 +20,9 @@
 #text1 {
     height: 40px;
     margin-top: 200px;
+    font-size: 25px;
+    padding: 0;
+    font-family: 'Yeseva One', serif;
 }
 
 #gal2 {
@@ -26,6 +32,9 @@
 #text2 {
     height: 40px;
     margin-top: 200px;
+    font-size: 20px;
+    padding: 0;
+    font-family: 'Yeseva One', serif;
 }
 
 #gal3 {
@@ -35,6 +44,9 @@
 #text3 {
     height: 40px;
     margin-top: 200px;
+    font-size: 25px;
+    padding: 0;
+    font-family: 'Yeseva One', serif;
 }
 
 @media screen and (min-width:768px) {
@@ -45,6 +57,9 @@
 
     #vault {
         height: 40px;
+        font-size: 40px;
+        font-family: 'Ovo', serif;
+        padding: 0;
     }
 
     #gal1 {
@@ -54,6 +69,9 @@
     #text1 {
         height: 25px;
         margin-top: 175px;
+        font-size: 20px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
     
     #gal2 {
@@ -63,6 +81,9 @@
     #text2 {
         height: 25px;
         margin-top: 175px;
+        font-size: 20px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
 
     #gal3 {
@@ -72,6 +93,9 @@
     #text3 {
         height: 25px;
         margin-top: 175px;
+        font-size: 20px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
     
 
@@ -81,6 +105,9 @@
 
     #vault {
         height: 100px;
+        font-size: 80px;
+        font-family: 'Ovo', serif;
+        padding: 0;
     }
 
     #gal1 {
@@ -90,6 +117,9 @@
     #text1 {
         height: 63px;
         margin-top: 490px;
+        font-size: 50px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
 
     #gal2 {
@@ -99,6 +129,9 @@
     #text2 {
         height: 63px;
         margin-top: 490px;
+        font-size: 50px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
 
     #gal3 {
@@ -108,6 +141,9 @@
     #text3 {
         height: 63px;
         margin-top: 490px;
+        font-size: 50px;
+        padding: 0;
+        font-family: 'Yeseva One', serif;
     }
 
 }
