--- a/sass/components/_slogan.scss
+++ b/sass/components/_slogan.scss
@@ -8,6 +8,8 @@
 #dedication {
     height: 256px;
     margin-top: 55px;
+    font-size: 45px;
+    padding: 0;
 }
 
 @media screen and (min-width:768px) {
@@ -20,6 +22,9 @@
     #dedication {
         height: 25px;
         margin-top: 23px;
+        font-family: 'Ovo', serif;
+        font-size: 20px;
+        padding: 0;
     }
 
 }
@@ -34,6 +39,9 @@
 
     #dedication {
         height: 63px;
+        font-family: 'Ovo', serif;
+        font-size: 50px;
+        padding: 0;
     }
 
 }
