--- a/css/main.css
+++ b/css/main.css
@@ -1,559 +1,1 @@
-body {
-  font-family: "KoHo", arial, sans-serif;
-}
-
-h2 {
-  font-family: "Montserrat", helvetica, arial;
-  font-size: 28px;
-  color: #ffffff;
-  margin-bottom: 20px;
-}
-
-p {
-  line-height: 24px;
-  margin-bottom: 28px;
-}
-
-#main-header {
-  background-color: #9a9a9a;
-  height: 76px;
-}
-
-#main-header #logo {
-  height: 48px;
-  margin-top: 15px;
-}
-
-#name {
-  display: none;
-}
-
-#main-header #portfolionav {
-  display: none;
-}
-
-#main-header #contactnav {
-  display: none;
-}
-
-#burger {
-  height: 33px;
-  margin-top: 15px;
-}
-
-@media screen and (min-width: 768px) {
-  #main-header #logo {
-    height: 45px;
-    margin-top: 16px;
-  }
-  #main-header #name {
-    display: block;
-    height: 18px;
-    margin-top: 20px;
-  }
-  #main-header #portfolionav {
-    display: block;
-    font-size: 18px;
-    margin-top: 25px;
-    font-family: "KoHo";
-    color: white;
-  }
-  #portfolionav a {
-    text-decoration: none;
-    color: white;
-  }
-  #main-header #contactnav {
-    display: block;
-    font-size: 18px;
-    margin-top: 25px;
-    font-family: "KoHo";
-    color: white;
-  }
-  #burger {
-    display: none;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #main-header {
-    height: 113px;
-  }
-  #main-header #logo {
-    height: 72px;
-    margin-top: 20px;
-  }
-  #main-header h2 {
-    margin-top: 20px;
-  }
-  #main-header #portfolionav {
-    display: block;
-    font-size: 30px;
-    margin-top: 45px;
-    font-family: "KoHo";
-    color: white;
-  }
-  #main-header #contactnav {
-    display: block;
-    font-size: 30px;
-    margin-top: 45px;
-    font-family: "KoHo";
-    color: white;
-  }
-  #portfolionav a {
-    text-decoration: none;
-    color: white;
-  }
-  #burger {
-    display: none;
-  }
-}
-#footerlogo {
-  height: 100px;
-  margin-top: 75px;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-
-#footername {
-  height: 39px;
-  font-family: "Montserrat", sans-serif;
-  font-size: 30px;
-  padding: 0;
-}
-
-#footerrights {
-  height: 85px;
-  font-size: 20px;
-  padding: 0;
-}
-
-@media screen and (min-width: 768px) {
-  #footerlogo {
-    height: 59px;
-    margin-top: 90px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  #footername {
-    height: 43px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 30px;
-    padding: 0;
-  }
-  #footerrights {
-    height: 28px;
-    font-size: 20px;
-    padding: 0;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #footerlogo {
-    height: 143px;
-    margin-top: 200px;
-    font-size: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  #footername {
-    height: 54px;
-    font-family: "Montserrat", sans-serif;
-    font-size: 50px;
-    padding: 0;
-  }
-  #footerrights {
-    height: 26px;
-    font-size: 20px;
-    padding: 0;
-  }
-}
-#position {
-  height: 146px;
-  margin-top: 60px;
-}
-
-#caption {
-  height: 137px;
-  margin-top: 20px;
-}
-
-#hero-con h3 {
-  font-size: 40px;
-  text-align: left;
-  font-family: "Raleway", sans-serif;
-  line-height: 1.5;
-}
-
-#hero-con p {
-  font-size: 18px;
-  text-align: right;
-  line-height: 1;
-}
-
-#download {
-  height: 32px;
-  font-size: 13px;
-}
-
-#meeting {
-  height: 32px;
-  font-size: 13px;
-}
-
-@media screen and (min-width: 768px) {
-  #position {
-    height: 189px;
-    margin-top: 80px;
-  }
-  #caption {
-    height: 65px;
-    margin-top: 200px;
-  }
-  #hero-con h3 {
-    font-size: 50px;
-    text-align: left;
-    font-family: "Raleway", sans-serif;
-    line-height: 1.5;
-  }
-  #hero-con p {
-    font-size: 13px;
-    text-align: right;
-    line-height: 1;
-    padding: 0;
-  }
-  #download {
-    height: 24px;
-    font-size: 13px;
-    padding: 0;
-  }
-  #meeting {
-    height: 24px;
-    font-size: 13px;
-    padding: 0;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #position {
-    height: 406px;
-    margin-top: 250px;
-  }
-  #caption {
-    height: 161px;
-    margin-top: 494px;
-  }
-  #hero-con h3 {
-    font-size: 125px;
-    text-align: left;
-    font-family: "Raleway", sans-serif;
-    line-height: 1.5;
-  }
-  #hero-con p {
-    font-size: 30px;
-    text-align: right;
-    line-height: 1.5;
-  }
-  #download {
-    height: 62px;
-    font-size: 30px;
-    padding: 0;
-  }
-  #meeting {
-    height: 62px;
-    font-size: 30px;
-    padding: 0;
-  }
-}
-#gallery {
-  background-color: #9a9a9a;
-  margin-top: 20px;
-}
-
-#vault {
-  height: 55px;
-  margin-top: 40px;
-  font-size: 40px;
-  font-family: "Ovo", serif;
-  padding: 0;
-}
-
-#gal1 {
-  height: 288px;
-}
-
-#text1 {
-  height: 40px;
-  margin-top: 200px;
-  font-size: 25px;
-  padding: 0;
-  font-family: "Yeseva One", serif;
-}
-
-#gal2 {
-  height: 288px;
-}
-
-#text2 {
-  height: 40px;
-  margin-top: 200px;
-  font-size: 20px;
-  padding: 0;
-  font-family: "Yeseva One", serif;
-}
-
-#gal3 {
-  height: 288px;
-}
-
-#text3 {
-  height: 40px;
-  margin-top: 200px;
-  font-size: 25px;
-  padding: 0;
-  font-family: "Yeseva One", serif;
-}
-
-@media screen and (min-width: 768px) {
-  #gallery {
-    margin-top: 30px;
-  }
-  #vault {
-    height: 40px;
-    font-size: 40px;
-    font-family: "Ovo", serif;
-    padding: 0;
-  }
-  #gal1 {
-    height: 252px;
-  }
-  #text1 {
-    height: 25px;
-    margin-top: 175px;
-    font-size: 20px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-  #gal2 {
-    height: 252px;
-  }
-  #text2 {
-    height: 25px;
-    margin-top: 175px;
-    font-size: 20px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-  #gal3 {
-    height: 252px;
-  }
-  #text3 {
-    height: 25px;
-    margin-top: 175px;
-    font-size: 20px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #vault {
-    height: 100px;
-    font-size: 80px;
-    font-family: "Ovo", serif;
-    padding: 0;
-  }
-  #gal1 {
-    height: 630px;
-  }
-  #text1 {
-    height: 63px;
-    margin-top: 490px;
-    font-size: 50px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-  #gal2 {
-    height: 630px;
-  }
-  #text2 {
-    height: 63px;
-    margin-top: 490px;
-    font-size: 50px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-  #gal3 {
-    height: 630px;
-  }
-  #text3 {
-    height: 63px;
-    margin-top: 490px;
-    font-size: 50px;
-    padding: 0;
-    font-family: "Yeseva One", serif;
-  }
-}
-#slogan {
-  height: 370px;
-}
-
-#dedication {
-  height: 256px;
-  margin-top: 55px;
-  font-size: 45px;
-  padding: 0;
-}
-
-@media screen and (min-width: 768px) {
-  #slogan {
-    height: 82px;
-  }
-  #dedication {
-    height: 25px;
-    margin-top: 23px;
-    font-family: "Ovo", serif;
-    font-size: 20px;
-    padding: 0;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #slogan {
-    height: 120px;
-  }
-  #dedication {
-    height: 63px;
-    font-family: "Ovo", serif;
-    font-size: 50px;
-    padding: 0;
-  }
-}
-#insights {
-  background-color: #9a9a9a;
-}
-
-#about {
-  height: 120px;
-  margin-top: 20px;
-  font-family: "Ovo", serif;
-  font-size: 50px;
-  padding: 0;
-}
-
-#myphoto {
-  height: 526px;
-  font-size: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-}
-
-#mycap {
-  height: 500px;
-}
-
-#insights p {
-  font-size: 15px;
-  text-align: left;
-  padding: 0;
-  line-height: 1.5;
-}
-
-#socials {
-  height: 80px;
-  font-family: "Yeseva One", serif;
-  font-size: 30px;
-  padding: 0;
-}
-
-#icons {
-  height: 125px;
-}
-
-@media screen and (min-width: 768px) {
-  #about {
-    height: 40px;
-    margin-top: 50px;
-    font-family: "Ovo", serif;
-    font-size: 40px;
-    padding: 0;
-  }
-  #myphoto {
-    height: 311px;
-    margin-top: 20px;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  #mycap {
-    height: 311px;
-    margin-top: 20px;
-  }
-  #insights p {
-    font-size: 15px;
-    text-align: left;
-    padding: 0;
-    line-height: 1;
-  }
-  #socials {
-    height: 32px;
-    margin-top: 40px;
-    font-family: "Yeseva One", serif;
-    font-size: 30px;
-    padding: 0;
-  }
-  #icons {
-    height: 65px;
-    display: inline;
-    justify-content: space-between;
-  }
-  #icons img {
-    height: 30px;
-    vertical-align: middle;
-  }
-}
-@media screen and (min-width: 1920px) {
-  #about {
-    height: 100px;
-    font-family: "Ovo", serif;
-    font-size: 90px;
-    padding: 0;
-  }
-  #myphoto {
-    height: 600px;
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-  }
-  #mycap {
-    height: 600px;
-  }
-  #insights p {
-    font-size: 30px;
-    text-align: left;
-    padding: 0;
-    line-height: 1.5;
-  }
-  #socials {
-    height: 81px;
-    font-family: "Yeseva One", serif;
-    font-size: 80px;
-    padding: 0;
-  }
-  #icons {
-    height: 100px;
-    display: flex;
-    justify-content: space-between;
-  }
-  #icons img {
-    height: 60px;
-  }
-}
+body{font-family:"KoHo",arial,sans-serif}h2{font-family:"Montserrat",helvetica,arial;font-size:28px;color:#fff;margin-bottom:20px}p{line-height:24px;margin-bottom:28px}#main-header{background-color:#d35051;height:76px}#main-header #logo{height:48px;margin-top:15px}#name{display:none}#main-header #portfolionav{display:none}#main-header #contactnav{display:none}#burger{height:33px;margin-top:15px}@media screen and (min-width: 768px){#main-header #logo{height:45px;margin-top:16px}#main-header #name{display:block;height:18px;margin-top:20px}#main-header #portfolionav{display:block;font-size:18px;margin-top:25px;font-family:"KoHo";color:#fff}#portfolionav a{text-decoration:none;color:#fff}#main-header #contactnav{display:block;font-size:18px;margin-top:25px;font-family:"KoHo";color:#fff}#burger{display:none}}@media screen and (min-width: 1920px){#main-header{height:113px}#main-header #logo{height:72px;margin-top:20px}#main-header h2{margin-top:20px}#main-header #portfolionav{display:block;font-size:30px;margin-top:45px;font-family:"KoHo";color:#fff}#main-header #contactnav{display:block;font-size:30px;margin-top:45px;font-family:"KoHo";color:#fff}#portfolionav a{text-decoration:none;color:#fff}#burger{display:none}}#footerlogo{height:100px;margin-top:75px;font-size:20px;display:flex;justify-content:center;align-items:center;color:#fff}#footername{height:39px;font-family:"Montserrat",sans-serif;font-size:30px;padding:0}#footerrights{height:85px;font-size:20px;padding:0}@media screen and (min-width: 768px){#footerlogo{height:59px;margin-top:90px;font-size:20px;display:flex;justify-content:center;align-items:center;color:#fff}#footername{height:43px;font-family:"Montserrat",sans-serif;font-size:30px;padding:0}#footerrights{height:28px;font-size:20px;padding:0}}@media screen and (min-width: 1920px){#footerlogo{height:143px;margin-top:200px;font-size:40px;display:flex;justify-content:center;align-items:center;color:#fff}#footername{height:54px;font-family:"Montserrat",sans-serif;font-size:50px;padding:0}#footerrights{height:26px;font-size:20px;padding:0}}#position{height:146px;margin-top:60px}#caption{height:137px;margin-top:20px}#hero-con h3{font-size:40px;text-align:left;font-family:"Raleway",sans-serif;line-height:1.5}#hero-con p{font-size:18px;text-align:right;line-height:1}#download{height:32px;font-size:13px}#meeting{height:32px;font-size:13px}@media screen and (min-width: 768px){#position{height:189px;margin-top:80px}#caption{height:65px;margin-top:200px}#hero-con h3{font-size:50px;text-align:left;font-family:"Raleway",sans-serif;line-height:1.5}#hero-con p{font-size:13px;text-align:right;line-height:1;padding:0}#download{height:24px;font-size:13px;padding:0}#meeting{height:24px;font-size:13px;padding:0}}@media screen and (min-width: 1920px){#position{height:406px;margin-top:250px}#hero-con{background-color:#f5eee6}#digital{color:#d35051}#caption{height:161px;margin-top:494px}#hero-con h3{font-size:125px;text-align:left;font-family:"Raleway",sans-serif;line-height:1.5}#hero-con p{font-size:30px;text-align:right;line-height:1.5}#download{height:62px;font-size:30px;padding:0;border-radius:15px;background-color:#3c4a4c;color:#f5eee6}#meeting{height:62px;font-size:30px;padding:0;border-radius:15px;background-color:#3c4a4c;color:#f5eee6}#download:hover{background-color:#d35051;color:#3c4a4c}#meeting:hover{background-color:#d35051;color:#3c4a4c}}#gallery{background-color:#9a9a9a;margin-top:20px}#vault{height:55px;margin-top:40px;font-size:40px;font-family:"Ovo",serif;padding:0}#gal1{height:288px}#text1{height:40px;margin-top:200px;font-size:25px;padding:0;font-family:"Yeseva One",serif}#gal2{height:288px}#text2{height:40px;margin-top:200px;font-size:20px;padding:0;font-family:"Yeseva One",serif}#gal3{height:288px}#text3{height:40px;margin-top:200px;font-size:25px;padding:0;font-family:"Yeseva One",serif}@media screen and (min-width: 768px){#gallery{margin-top:30px}#vault{height:40px;font-size:40px;font-family:"Ovo",serif;padding:0}#gal1{height:252px}#text1{height:25px;margin-top:175px;font-size:20px;padding:0;font-family:"Yeseva One",serif}#gal2{height:252px}#text2{height:25px;margin-top:175px;font-size:20px;padding:0;font-family:"Yeseva One",serif}#gal3{height:252px}#text3{height:25px;margin-top:175px;font-size:20px;padding:0;font-family:"Yeseva One",serif}}@media screen and (min-width: 1920px){#vault{height:100px;font-size:80px;font-family:"Ovo",serif;padding:0}#gal1{height:630px}#text1{height:63px;margin-top:490px;font-size:50px;padding:0;font-family:"Yeseva One",serif}#gal2{height:630px}#text2{height:63px;margin-top:490px;font-size:50px;padding:0;font-family:"Yeseva One",serif}#gal3{height:630px}#text3{height:63px;margin-top:490px;font-size:50px;padding:0;font-family:"Yeseva One",serif}}#slogan{height:370px}#dedication{height:256px;margin-top:55px;font-size:45px;padding:0}@media screen and (min-width: 768px){#slogan{height:82px}#dedication{height:25px;margin-top:23px;font-family:"Ovo",serif;font-size:20px;padding:0}}@media screen and (min-width: 1920px){#slogan{height:120px}#dedication{height:63px;font-family:"Ovo",serif;font-size:50px;padding:0}}#insights{background-color:#9a9a9a}#about{height:120px;margin-top:20px;font-family:"Ovo",serif;font-size:50px;padding:0}#myphoto{height:526px;font-size:20px;display:flex;justify-content:center;align-items:center;color:#fff}#mycap{height:500px}#insights p{font-size:15px;text-align:left;padding:0;line-height:1.5}#socials{height:80px;font-family:"Yeseva One",serif;font-size:30px;padding:0}#icons{height:125px}@media screen and (min-width: 768px){#about{height:40px;margin-top:50px;font-family:"Ovo",serif;font-size:40px;padding:0}#myphoto{height:311px;margin-top:20px;font-size:20px;display:flex;justify-content:center;align-items:center;color:#fff}#mycap{height:311px;margin-top:20px}#insights p{font-size:15px;text-align:left;padding:0;line-height:1}#socials{height:32px;margin-top:40px;font-family:"Yeseva One",serif;font-size:30px;padding:0}#icons{height:65px;display:inline;justify-content:space-between}#icons img{height:30px;vertical-align:middle}}@media screen and (min-width: 1920px){#about{height:100px;font-family:"Ovo",serif;font-size:90px;padding:0}#myphoto{height:600px;font-size:30px;display:flex;justify-content:center;align-items:center;color:#fff}#mycap{height:600px}#insights p{font-size:30px;text-align:left;padding:0;line-height:1.5}#socials{height:81px;font-family:"Yeseva One",serif;font-size:80px;padding:0}#icons{height:100px;display:flex;justify-content:space-between}#icons img{height:60px}}
