--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -2,7 +2,7 @@
 
 #gallery {
     background-color: a.$gray-color;
-    margin-top: 20px;
+    margin-top: 0px;
 }
 
 #vault {
@@ -52,7 +52,7 @@
 @media screen and (min-width:768px) {
 
     #gallery {
-        margin-top: 30px;
+        margin-top: 0px;
     }
 
     #vault {
@@ -103,6 +103,10 @@
 
 @media screen and (min-width:1920px) {
 
+    #gallery {
+        margin-top: 0px;
+    }
+    
     #vault {
         height: 100px;
         font-size: 80px;
