--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -40,7 +40,7 @@
 
     #main-header #name {
         display: block;
-        height: 18px;
+        height: 15px;
         margin-top: 20px;
     }
 
@@ -58,6 +58,8 @@
         color: white;
     }
 
+    
+
     #main-header #contactnav {
         display: block;
         font-size: 18px;
@@ -65,6 +67,8 @@
         font-family: 'KoHo';
         color: white;
     }
+
+    
 
     #burger {
         display: none;
@@ -82,11 +86,6 @@
         height: 72px;
         margin-top: 20px;
     }
-
-    // #main-header #name {
-    //     font-family: 'Raleway';
-    //     margin-top: 20px;
-    // }
 
     #main-header h2 {
         margin-top: 20px;
@@ -108,21 +107,17 @@
         color: white;
     }
 
-    // #main-header #portfolionav {
-    //     display: block;
-    //     height: 33px;
-    //     margin-top: 33px;
-    // }
-
-    // #main-header #contactnav {
-    //     display: block;
-    //     height: 33px;
-    //     margin-top: 33px;
-    // }
-
     #portfolionav a {
         text-decoration: none;
         color: white;
+    }
+
+    #portfolionav a:hover {
+        color: #3C4A4C;
+    }
+
+    #contactnav a:hover {
+        color: #3C4A4C;
     }
 
     #burger {
