--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -105,42 +105,78 @@
 
     #gallery {
         margin-top: 0px;
+        background-color: #D35051;
     }
     
     #vault {
         height: 100px;
-        font-size: 80px;
+        font-size: 90px;
+        color: white;
         font-family: 'Ovo', serif;
         padding: 0;
+        margin-bottom: 1px;
     }
 
     #gal1 {
-        height: 630px;
-        
+        margin-bottom: 50;
+        border: 20px;
+        position: relative;
+        grid-row: 2/3;
+       height: 900px;
     }
 
-    #text1 {
-        height: 63px;
-        margin-top: 490px;
-        font-size: 50px;
-        padding: 0;
-        font-family: 'Yeseva One', serif;
+    #gal1 img {
+       
+        border-radius: 20px;
+        box-shadow: 4px 4px 5px rgba(107, 102, 102, 0.7);
     }
+
+    .text1 {
+        font-family: 'Yeseva One', serif;
+        color: #F5EEE6;
+        font-size: 130px;
+        z-index: 2;
+        grid-row: 2/3;
+        margin-top: 346px;
+    }
+
 
     #gal2 {
-        height: 630px;
+        height: 900px;
+        grid-row:3/4;
     }
 
-    #text2 {
-        height: 63px;
-        margin-top: 490px;
-        font-size: 50px;
-        padding: 0;
+    #gal2 img {
+        border-radius: 20px;
+        box-shadow: 4px 4px 5px rgba(107, 102, 102, 0.7);
+    }
+
+    .text2 {
         font-family: 'Yeseva One', serif;
+        color: #F5EEE6;
+        font-size: 134px;
+        z-index: 2;
+        grid-row: 3/4;
+        margin-top: 346px;
     }
 
     #gal3 {
-        height: 630px;
+        height: 900px;
+        grid-row: 4/5;
+    }
+
+    #gal3 img {
+        border-radius: 20px;
+        box-shadow: 4px 4px 5px rgba(107, 102, 102, 0.7);
+    }
+
+    .text3 {
+        font-family: 'Yeseva One', serif;
+        color: #3C4A4C;
+        font-size: 120px;
+        z-index: 2;
+        grid-row: 4/5;
+        margin-top: 270px;
     }
 
     #text3 {
