--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -10,8 +10,18 @@
     margin-top: 20px;
 }
 
+
+#hero-con {
+    background-color: #F5EEE6;
+    
+}
+
+#digital {
+    color: #D35051;
+}
+
 #hero-con h3 {
-    font-size: 40px;
+    font-size: 55px;
     text-align: left;
     font-family: 'Raleway', sans-serif;
     line-height: 1.5;
@@ -26,11 +36,25 @@
 #download {
     height: 32px;
     font-size: 13px;
+    padding: 0;
+    border-radius: 15px;
+    background-color: #3C4A4C;
+    color: #F5EEE6;
+    border: none;
+    color: #F5EEE6;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
 #meeting {
     height: 32px;
     font-size: 13px;
+    padding: 0;
+    border-radius: 15px;
+    background-color: #3C4A4C;
+    color: #F5EEE6;
+    border: none;
+    color: #F5EEE6;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
 @media screen and (min-width:768px) {
