--- a/sass/components/_insights.scss
+++ b/sass/components/_insights.scss
@@ -8,9 +8,10 @@
 #about {
     height: 120px;
     margin-top: 20px;
-    font-family: 'Ovo', serif;
+    font-family: 'Bungee', sans-serif;
     font-size: 50px;
     padding: 0;
+    color: #F5EEE6;
 }
 
 #myphoto {
@@ -20,6 +21,11 @@
     justify-content: center;
     align-items: center;
     color: white;
+}
+
+#myphoto img {
+    border-radius: 20px;
+    box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
 }
 
 #mycap {
@@ -35,9 +41,11 @@
 
 #socials {
     height: 80px;
-    font-family: 'Yeseva One', serif;
+    font-family: 'Bungee', sans-serif;
     font-size: 30px;
     padding: 0;
+    color: #F5EEE6;
+    margin-top: 0px;
 }
 
 #icons {
@@ -49,9 +57,10 @@
     #about {
         height: 40px;
         margin-top: 50px;
-        font-family: 'Ovo', serif;
+        font-family: 'Bungee', sans-serif;
         font-size: 40px;
         padding: 0;
+        color: #F5EEE6;
     }
 
     #myphoto {
@@ -62,6 +71,11 @@
         justify-content: center;
         align-items: center;
         color: white;
+    }
+
+    #myphoto img {
+        border-radius: 20px;
+        box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
     }
 
     #mycap {
@@ -79,9 +93,11 @@
     #socials {
         height: 32px;
         margin-top: 40px;
-        font-family: 'Yeseva One', serif;
+        font-family: 'Bungee', sans-serif;
         font-size: 30px;
         padding: 0;
+        color: #F5EEE6;
+        margin-top: 0px;
     }
 
     #icons {
@@ -101,10 +117,15 @@
 
 @media screen and (min-width:1920px) {
 
+    #insights {
+        background-color: #D35051;
+    }
+
     #about {
         height: 100px;
-        font-family: 'Ovo', serif;
-        font-size: 90px;
+        font-family: 'Bungee', sans-serif;
+        font-size: 80px;
+        margin-bottom: 88px;
         padding: 0;
     }
 
@@ -115,6 +136,11 @@
         justify-content: center;
         align-items: center;
         color: white;
+    }
+
+    #myphoto img {
+        border-radius: 20px;
+        box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
     }
 
     #mycap {
@@ -130,19 +156,24 @@
 
     #socials {
         height: 81px;
-        font-family: 'Yeseva One', serif;
-        font-size: 80px;
+        font-family: 'Bungee', sans-serif;
+        font-size: 70px;
         padding: 0;
+        color: #F5EEE6;
+        margin-top: 0px;
+        margin-bottom: 60px;
     }
 
     #icons {
         height: 100px;
         display: flex;
         justify-content: space-between;
+        
     }
 
     #icons img {
         height: 60px;
+      
     }
 
 }
