--- a/sass/components/_slogan.scss
+++ b/sass/components/_slogan.scss
@@ -10,6 +10,7 @@
     margin-top: 55px;
     font-size: 45px;
     padding: 0;
+    font-family: 'Bungee', sans-serif;
 }
 
 @media screen and (min-width:768px) {
@@ -22,8 +23,8 @@
     #dedication {
         height: 25px;
         margin-top: 23px;
-        font-family: 'Ovo', serif;
-        font-size: 20px;
+        font-family: 'Bungee', sans-serif;
+        font-size: 30px;
         padding: 0;
     }
 
@@ -39,9 +40,10 @@
 
     #dedication {
         height: 63px;
-        font-family: 'Ovo', serif;
-        font-size: 50px;
+        font-family: 'Bungee', sans-serif;
+        font-size: 45px;
         padding: 0;
+        margin-top: 10px;
     }
 
 }
