--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -44,16 +44,22 @@
 
     #main-header #name {
         display: block;
-        height: 15px;
+        height: 10px;
         margin-top: 20px;
     }
 
-   
+    #main-header #about {
+        display: block;
+        font-size: 15px;
+        margin-top: 25px;
+        font-family: 'KoHo';
+        color: white;
+    }
 
 
     #main-header #portfolionav  {
         display: block;
-        font-size: 18px;
+        font-size: 15x;
         margin-top: 25px;
         font-family: 'KoHo';
         color: white;
@@ -68,7 +74,7 @@
 
     #main-header #contactnav {
         display: block;
-        font-size: 18px;
+        font-size: 15px;
         margin-top: 25px;
         font-family: 'KoHo';
         color: white;
