--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -43,10 +43,14 @@
         color: white;
     }
 
+    #footerlogo img {
+        height: 50px;
+    }
+
     #footername {
         height: 43px;
         font-family: 'Montserrat', sans-serif;
-        font-size: 30px;
+        font-size: 33px;
         padding: 0;
     }
 
