--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -86,8 +86,10 @@
     #footername {
         height: 54px;
         font-family: 'Montserrat', sans-serif;
-        font-size: 50px;
+        font-size: 63px;
         padding: 0;
+        margin-bottom: 10px;
+        text-align: center;
     }
 
     #footerrights {
