--- a/sass/components/_slogan.scss
+++ b/sass/components/_slogan.scss
@@ -8,7 +8,8 @@
 #dedication {
     height: 256px;
     margin-top: 55px;
-    font-size: 45px;
+    font-size: 30px;
+    text-align: center;
     padding: 0;
     font-family: 'Bungee', sans-serif;
 }
