--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -14,17 +14,23 @@
      color: white;
 }
 
+#footerlogo img {
+    height: 50px;
+}
+
 #footername {
     height: 39px;
     font-family: 'Montserrat', sans-serif;
     font-size: 30px;
     padding: 0;
+    text-align: center;
 }
 
 #footerrights {
     height: 85px;
-    font-size: 20px;
+    font-size: 15px;
     padding: 0;
+    text-align: center;
 }
 
 @media screen and (min-width:768px) {
