added and updated the page

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -132,6 +132,11 @@
         color: white;
     }
 
+    #aboutlink {
+        text-decoration: none;
+        color: white;
+    }
+
     #about a:hover {
         color: #3C4A4C;
     }
