--- a/sass/components/_insights.scss
+++ b/sass/components/_insights.scss
@@ -114,12 +114,10 @@
         justify-content: space-between;
     }
 
-    #icons img {
-       
-        height: 30px;
-        vertical-align: middle;
-        
+    #icons a img {
+        height: 50px;
     }
+    
 
 }
 
@@ -179,9 +177,9 @@
         
     }
 
-    #icons img {
-        height: 60px;
-      
+    #icons a img {
+        height: 70px;
     }
+    
 
 }
