--- a/sass/components/_aboutme.scss
+++ b/sass/components/_aboutme.scss
@@ -62,6 +62,8 @@
     #aboutme {
         background-color: rgb(245, 238, 230);
         height: 907px;
+        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
+        background-size: 20px 20px;
     }
 
     #aboutheader h3 {
