--- a/sass/components/_insights.scss
+++ b/sass/components/_insights.scss
@@ -158,6 +158,31 @@
         text-align: left;
         padding: 0;
         line-height: 1.5;
+        margin-top: 58px;
+        
+    }
+
+    #curious {
+        height: 62px;
+        font-size: 30px;
+        padding: 0;
+        border-radius: 15px;
+        background-color: #F5EEE6;
+        color: #3C4A4C;
+        border: none;
+        
+        box-shadow: 4px 4px 5px rgba(0, 0, 0, 0.2);
+        
+    }
+
+    #curious:hover {
+        background-color: #3C4A4C;
+        color:white;
+    }
+
+    #curious a {
+        text-decoration: none;
+        color: #D35051;
     }
 
     #socials {
