--- a/sass/components/_slogan.scss
+++ b/sass/components/_slogan.scss
@@ -35,8 +35,11 @@
 
     #slogan {
         height: 120px;
+        background-color: #F5EEE6;
         
-        // overflow: hidden;
+        background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.294) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.1) 75%, transparent 75%, transparent);
+        background-size: 20px 20px;
+        
     }
 
     #dedication {
@@ -45,6 +48,7 @@
         font-size: 45px;
         padding: 0;
         margin-top: 10px;
+        color: #3C4A4C;
     }
 
 }
