--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -244,4 +244,59 @@
         font-family: 'Yeseva One', serif;
     }
 
+
+    // Lightbox
+
+    // .lightbox {
+    //     width: 100vw;
+    //     height: 100vh;
+
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+
+    //     background-color: rgba(0, 0, 0, 0.85);
+
+    //     z-index: 5;
+
+    //     display: none;
+    // }
+
+    // #lightbox1 {background-image: url('../images/earbuds_pyderl_c_scale,w_1920.jpg');}
+    // #lightbox1 {background-image: url('../images/f1_iju67f_c_scale,w_1920.jpg');}
+    // #lightbox1 {background-image: url('../images/swerve_a6yrwn_c_scale,w_1920.jpg');}
+
+    // .lightbox_close {
+    //     position: relative;
+    //     top: 20px;
+    //     left: 95%;
+
+    //     color: white;
+    //     font-size: 3em;
+
+    //     text-decoration: none;
+
+    //     font-weight: bolder;
+    // }
+
+    // .lightbox article {
+    //     width: 55%;
+    //     margin-left: 40%;
+    //     padding-top: 50px;
+    // }
+
+    // .lb_text, .lb_heading {
+    //     text-align: left;
+    // }
+
+    // .lb_text {
+    //     line-height: 1.6 !important;
+    //     margin-left: 0;
+    //     padding-top: 2em;
+    // }
+
+    // .lightbox:target {
+    //     display: block;
+    // }
+
 }
